# missionControl

./: .gitignore  CMakeLists.txt  README.md
simulator/: rover_simulator.py
src/: main.cpp
src/battery/: mapwidget.cpp  mapwidget.h
src/signals/: roverworker.cpp  roverworker.h
src/triangle/: mainwindow.cpp  mainwindow.h
src/window/: roverstate.h
